fixes topic block on tablet, updates product names to use vars for collection page

--- a/local/scss/components/_topic-block.scss
+++ b/local/scss/components/_topic-block.scss
@@ -63,6 +63,9 @@
 			font-size: 18px;
 			text-align: center;
 			@media (min-width: $screen-sm) {
+				font-size: 16px;
+			}
+			@media (min-width: $screen-md) {
 				font-size: 20px;
 			}
 			@media (min-width: $screen-lg) {
